<resources>
    <string name="app_name">KlarFerdigBål</string>

    <string name="info1">• Trykk på kartet for å sjekke skogbrannfare for et angitt område.</string>
    <string name="info2">• Zoom inn på kartet for å se bålikoner ved godkjente bålplasser.
        For øyeblikket kan du se bålplasser i for eksempel Oslo, Bærum, Sarpsborg, Mandal
        og noen andre områder.</string>
    <string name="info3">• Hvis det ikke er noen skogbrannfare-varsler i Norge for øyeblikket,
        vil det ikke være noe fargefilter(overlay) på kartet.</string>
    <string name="info4">• Det hentes kun skogbrannfare-varsler i Norge.</string>
    <string name="info5">• En del av appens funksjonalitet er avhengig av å ha skrudd på GPS-lokasjon.</string>
    <string name="info6">• Varsler her knappen viser varsler på din nåværende lokasjon.</string>
    <string name="info7">• Dra-hit funksjonen viser sti og gangvei som kommer så nære markøren som mulig.</string>
    <string name="info8">• Personopplysninger i form av lokasjon blir brukt til funksjoner som tar i bruk GPS lokasjon,
        disse funksjonene er avhengig av disse opplysningene og vil ikke fungere uten tilgang til dette.</string>
    <string name="info9">• Personopplysningene blir behandlet av Google (Places API og Geocoding API) og
        Meteorologisk institutt (MetAlerts API) for å tilby den tidligere nevnte funksjonaliteten.</string>

    <string name="rule1">• Respekter det nasjonale bålforbudet fra 15. april til 15.september.
         Ikke tenn bål i skog og utmark i denne perioden.</string>
    <string name="rule2">• Følg med på skogbrannvarselet og følg rådene fra ditt lokale brannvesen.</string>
    <string name="rule3">• Bruk godkjente bålplasser hvis du skal tenne bål.</string>
    <string name="rule4">• Ta hensyn til skogbrannfare og vindforhold.</string>
    <string name="rule5">• Det er alltid den som brenner bål som har ansvaret
       for brannsikkerheten.</string>
    <string name="rule6">• Det bør være en voksen, edru person som er
       ansvarlig for bålet.</string>
    <string name="rule7">• Bålet må være i god avstand fra bebyggelse og
        vegetasjon.</string>
    <string name="rule8">• Det er ikke lov å brenne bål på svalberg.</string>
    <string name="rule9">• Bålet må ikke være større enn at du har kontroll på
       det og kan slokke ved behov.</string>
    <string name="rule10">• Ha egnede slokkemidler lett tilgjengelig.</string>
    <string name="rule11">• Det er forbudt å brenne plast, bygningsmaterialer
        og annen søppel.</string>
    <string name="rule12">• Når du forlater bålplassen skal bålet være helt
        slokket.</string>

    <string name="title">Regler</string>
    <string name="title2">Info</string>
    <string name="imgClose">Avslutt</string>
    <string name="imgFire">flammeikon</string>
    <string name="info">Info</string>
    <string name="regler">Regler</string>
    <string name="infoContent">Trykk på kartet for å sjekke skogbrannfaren for området</string>
    <string name="overlay">Varselsoner</string>
    <string name="infoButtonText">Info</string>
    <string name="app_title">Klar Ferdig Bål</string>

    <string name="levels">Farenivåer</string>
    <string name="moderate_description">Gult farenivå vises når det finnes en
    risiko for farlige situasjoner som kan forårsake lokale skader.</string>
    <string name="severe_description">Oransje farenivå vises når det er vesentlig risiko
    for fare som kan ha omfattende konsekvenser for mange mennesker.</string>

    <string name="loading">Loading…</string>
    <string name="close_infobox_button">Close infobox button</string>
    <string name="overlay_button">Overlay Button</string>
    <string name="info_button">Info Button</string>
    <string name="sok">Søk…</string>
    <string name="farevarselniva">Farevarselnivå</string>
    <string name="nivaer">Nivåer</string>
    <string name="informasjon">Informasjon</string>
    <string name="dra_hit">Dra hit</string>
    <string name="balplasser">Bålplasser</string>
    <string name="popup">popup</string>
    <string name="menu_button">Menu button</string>
    <string name="varsler_her">Varsel for min posisjon</string>
    <string name="kartfunksjoner">Kartfunksjoner</string>

    <string name="api_key">AIzaSyAyK0NkgPMxOOTnWR5EFKdy2DzfDXGh-HI</string>

    <!-->To nivåer: 'skogbrannfare' (gult) og 'Stor skogbrannfare' (oransje) </-->
    <!-->Se https://www.met.no/vaer-og-klima/ekstremvaervarsler-og-andre-farevarsler/vaerfenomener-som-kan-gi-farevarsel-fra-met/varsel-om-skogbrannfare</-->
    <string name="moderat_skogbrannfare">Skogbrannfare</string>
    <string name="moderat_skogbrannfare_ikon">Skogbrannfare ikon</string>
    <string name="stor_skogbrannfare">Stor skogbrannfare</string>
    <string name="logo">Logo</string>
    <string name="ingen_varsel">Ingen varsel funnet</string>
    <string name="ingen_varsel_området">Ingen varsel i dette området</string>
    <string name="henter_varsel">Henter varsel…</string>
    <string name="menu_background">Menu Background</string>
    <string name="nivaaer_ikon">nivåer ikon</string>
    <string name="dra_hit_knapp">Dra hit knapp</string>
    <string name="dra_hit_knapp_ikon">Dra hit knapp ikon</string>
    <string name="farevarsel_nivaa_bilde">Farevarsel nivå bilde</string>
    <string name="farevarsel_stor_brannfare_ikon">Farevarsel stor brannfare ikon</string>
    <string name="oransj_skogbrannfare_ikon">oransj skogbrannfare ikon</string>
    <string name="gul_skogbrannfare_ikon">gul skogbrannfare ikon</string>
    <string name="nivaaer_tilbake_knapp">Nivåer tilbake knapp</string>
    <string name="meny">meny</string>
    <string name="tilbake_knapp">Tilbake knapp</string>
    <string name="splash_screen_ikon">splash screen logo</string>

</resources>