<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/longbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".view.InfoView"
        android:paddingBottom="150dp">


        <TextView
            android:id="@+id/title"
            android:layout_width="277dp"
            android:layout_height="43dp"
            android:gravity="center"
            android:text="@string/tittel2"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.061" />

        <ImageButton
            android:id="@+id/returnButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/backbutton"
            android:contentDescription="@string/tilbakeKnapp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/info1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/info1"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/rule3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/rule3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/info2"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/rule4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/rule4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:text="@string/info3"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/rule5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/rule5"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:text="@string/info4"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/rule6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/rule6"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="360dp"
            android:text="@string/info5"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/rule7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/rule7"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="440dp"
            android:text="@string/info6"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/rule8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/rule8"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:text="@string/info7"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/info8"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="580dp"
            android:text="@string/info8"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/info9"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="720dp"
            android:text="@string/info9"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>